# takibi

./: .gitignore  AGENTS.md  CLAUDE.md  HISTORY.md  Makefile  OWNERSHIP_KERNEL.md  README.md  SPEC.md  TAKIBI_CORE.md  dune-project
.claude/: settings.json  settings.local.json
.codex/: hooks.json
.devcontainer/: devcontainer-lock.json  devcontainer.json
examples/: main.c  start.takibi  start.tkb
examples/align/: align.expected  (+1 more)
lib/: ast.ml  codegen.ml  const_env.ml  dune  lexer.mll  llvm_gen.ml  parser.mly  takibi_core.ml  type_inf.ml  type_layout.ml  typechecker.ml  types.ml  use_resolver.ml
scripts/: arp_test.py  check_suite_output.py  eth_arp_reply_test.py  eth_http_server_sdcard_test.py  eth_http_server_test.py  eth_icmp_echo_test.py  eth_kvs_server_stm32_test.py  eth_kvs_server_test.py  eth_net_echo_test.py  eth_tcp_echo_test.py  fatfs_mtools_test.py  http_server_concurrent_test.py  http_server_test.py  icmp_echo_test.py  kvs_concurrent_test.py  kvs_stress.py  kvs_test.py  profile_http_load.py  profile_http_server.py  profile_pc_sampler.py  profile_stm32_http_server_sdcard_rtos.sh  profile_stm32_kvs_server_sdcard_rtos.sh  profile_tcp_burst_load.py  profile_tcp_echo.py  provision_http_server_sdcard.sh  rpi3_jtag_load.sh  rpi3_jtag_reset.sh  rpi3_prepare_sdcard.sh  rpi3_provision_http_server_sdcard.sh  rpi_uart_dev.sh  run_allcheck.sh  run_hwtest.sh  run_hwtest_net.sh  run_hwtest_net_ram.sh  run_hwtest_ram.sh  run_hwtest_rpi3.sh  run_hwtest_rpi3_net.sh  run_qemutest.sh  sdcard_test.py  stm32_hw_claim.sh  (+5 more)
test/: dune  test_takibi.ml
tests/: qemu_test.sh
(+478 files in other folders)
