(library
 (name takibi)
 (public_name takibi)
 (modules ast const_env type_layout types type_inf typechecker llvm_gen lexer parser use_resolver)
 (libraries menhirLib llvm llvm.analysis llvm.target llvm.all_backends llvm.passbuilder llvm.debuginfo)
 (preprocess
  (pps ppx_deriving.show)))

(menhir
 (modules parser))

(rule
 (targets lexer.ml)
 (deps    lexer.mll)
 (action  (run ocamllex -o lexer.ml lexer.mll)))
